--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ body{
 
 .mclaren-section-one{
     background-image: linear-gradient(0deg,rgba(0, 0, 0, 0.534),rgba(255, 255, 255, 0)),
-    url("../images/image2.jpg");
+    url("./images/image2.jpg");
     min-height: 650px;
     width: 100vw;
     background-position: center;
